[package]
name = "example"
version = "0.0.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Rust-iendo Barcelona <riendocontributions@gmail.com>", "Daniel Griffen <daniel@griffen.io>"]
publish = false

edition = "2018"
[workspace]
members = ["."]

[dependencies]
env_logger = "0.5"

wearte = { version = "0.0", features=["with-actix-web"]  }

actix = "0.7"
actix-web = "0.7"

[build-dependencies]
wearte = { version = "0.0", features=["with-actix-web"]  }
