[package]
name = "wearte"
version = "0.0.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Rust-iendo Barcelona <riendocontributions@gmail.com>", "Daniel Griffen <daniel@griffen.io>"]
description = "Type-safe, compiled Handlebars"
documentation = "https://docs.rs/wearte"
keywords = ["markup", "template", "handlebars", "html"]
categories = ["template-engine"]
homepage = "https://github.com/dgriffen/wearte"
repository = "https://github.com/dgriffen/wearte"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2018"

[badges]
travis-ci = { repository = "dgriffen/wearte" }
maintenance = { status = "actively-developed" }

[features]
default = []
with-actix-web = ["actix-web", "wearte_derive/actix-web"]

[dependencies]
wearte_derive = { version = "0.0", path = "../wearte_derive" }
wearte_helpers = { version = "0.0", path = "../wearte_helpers" }
wearte_config = { version = "0.0", path = "../wearte_config" }
actix-web = { version = "0.7", optional = true }
