[package]
name = "wearte_config"
version = "0.0.1"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Rust-iendo Barcelona <riendocontributions@gmail.com>", "Daniel Griffen <daniel@griffen.io>"]
description = "Config file parser of wearte"
documentation = "https://docs.rs/wearte_config"
keywords = ["markup", "template", "handlebars", "html", "handlebars_config"]
categories = ["template-engine"]
homepage = "https://github.com/dgriffen/wearte"
repository = "https://github.com/dgriffen/wearte"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2018"

[badges]
travis-ci = { repository = "dgriffen/wearte" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
