[package]
name = "wearte_helpers"
version = "0.0.2"
authors = ["Dirkjan Ochtman <dirkjan@ochtman.nl>", "Daniel Griffen <daniel@griffen.io>"]
description = "Helper collection for wearte"
documentation = "https://docs.rs/wearte_helpers"
keywords = ["markup", "template", "handlebars", "html", "wearte_helpers"]
categories = ["template-engine"]
homepage = "https://github.com/dgriffen/wearte"
repository = "https://github.com/dgriffen/wearte"
license = "MIT/Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2018"

[badges]
travis-ci = { repository = "dgriffen/wearte" }
maintenance = { status = "actively-developed" }

[dependencies]
v_htmlescape = "^0.4.2"
cfg-if = "0.1"

[build-dependencies]
version_check = "0.1"
